Added Helpers and new endpoints, updated api.
