# backend/schemas/Item.py
@@ -1,5 +1,4 @@
 from datetime import date
-
 from pydantic import BaseModel
 from enum import Enum
 
@@ -8,13 +7,13 @@ class Unit(str, Enum):
     kg = "kg"
     ml = "ml"
     l = "l"
-    unit = "unit"
+    piece = "piece"
     
 
 class ItemPost(BaseModel):
     name: str
     ownedBy: str
-    categoryId: str
+    categoryId: int
     amount: float | None = None
     unit: Unit | None = None
     expDate: date | None = None
